# The-Spell

./: .gitattributes  CMakeLists.txt  LICENSE  Main.cpp  README.md  The_spell  makefile
Animation/: Animation.cpp  Animation.hpp
BigRect/: BigRect.cpp  BigRect.hpp
CentralStuff/: CoreFunctions.cpp  CoreFunctions.hpp  GUIWrapper.hpp  GlobalVariables.hpp  Random.hpp  TypeDefs.hpp
Chunk/: Chunk.hpp
Enemy/BasicEnemy/: BasicEnemy.cpp  BasicEnemy.hpp
Enemy/Core/: Enemy.cpp  Enemy.hpp
Enemy/IntelligentEnemy/: IntelligentEnemy.cpp  IntelligentEnemy.hpp
EngineLogic/: TestLogic.cpp
EngineLogic/Animation/: Animation.hpp
EngineLogic/CentralStuff/: CoreFunctions.hpp  GlobalVariables.hpp  Random.hpp  TypeDefs.hpp
EngineLogic/Enemy/BasicEnemy/: BasicEnemy.cpp
EngineLogic/Enemy/Core/: Enemy.hpp
EngineLogic/Enemy/IntelligentEnemy/: IntelligentEnemy.cpp  IntelligentEnemy.hpp
EngineLogic/Entity/: Entity.cpp  Entity.hpp
EngineLogic/Player/: Player.hpp
EngineLogic/Player/Camera/: Camera.hpp
EngineLogic/ResourceManager/: ResourceManager.hpp
EngineLogic/SmartRect/: SmartRect.hpp
EngineLogic/TileMap/: TileMap.cpp  TileMap.hpp
Entity/: Entity.cpp  Entity.hpp
JSONParser/Core/: Core.hpp
JSONParser/Core/Grammar/: Grammar.hpp
JSONParser/Grammar/: Grammar.hpp
JSONParser/Object/: Object.cpp  Object.hpp
LevelParser/: LevelParser.cpp  LevelParser.hpp
Levels/: Test.json
Player/: Player.cpp  Player.hpp
Player/Camera/: Camera.cpp  Camera.hpp
Player/EventHandler/: EventHandler.cpp  EventHandler.hpp
ResourceManager/: ResourceManager.cpp  ResourceManager.hpp
Resources/: The Spell TileSet.tsx  untitled.json  untitled.tmx
SmartRect/: SmartRect.cpp  SmartRect.hpp
Tile/: Tile.cpp  Tile.hpp
TileEditor/: TileEditor.hpp
TileEditor/Core/Info/: Info.cpp  Info.hpp
TileEditor/Core/Widgets/: Widgets.hpp
TileEditor/Core/Widgets/CanvasUpdater/: CanvasUpdater.cpp  CanvasUpdater.hpp
TileEditor/Core/Widgets/Creators/: Creators.hpp  Creators.tpp
TileEditor/Core/Widgets/Getters/: Getters.cpp  Getters.hpp  Getters.tpp
TileEditor/Core/Widgets/Handlers/: Handlers.cpp  Handlers.hpp
TileEditor/Session/: EditorSession.cpp  EditorSession.hpp
TileEditor/Session/Setup/: Setup.cpp  Setup.hpp
TileMap/: TileMap.cpp  TileMap.hpp
